src/objects/Ven_Financial_Model_Version__c.object
<CustomObject>
    <description>SevenVentures gruppiert in diesem Objekt seine Financial Model Daten zu Typversionen der Plan-, Actual- und Budgetdaten.</description>
    <fields>
        <fullName>Ven_Opportunity__c</fullName>
        <description>Stellt die Verbindung zur Opportunity her</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financial Model Versions</relationshipLabel>
        <relationshipName>Financial_Model_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_version_number__c</fullName>
        <defaultValue>00.10</defaultValue>
        <description>Speichert die Versionsnummer der Financial Model Daten eines Typs</description>
        <inlineHelpText>Wird automatisch beim Upload gesetzt.</inlineHelpText>
        <label>Version number</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_write_protection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sperrt die Versionsnummer beim Upload, so dass eine neue angelegt werden muss.</description>
        <inlineHelpText>wird automatisch gesetzt</inlineHelpText>
        <label>write protection</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Model Version</label>
    <nameField>
        <label>Financial Model Version-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Model Versions</pluralLabel>
    <recordTypes>
        <fullName>Ven_Actual_Data</fullName>
        <active>true</active>
        <description>Actual Data</description>
        <label>Actual Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ven_Budget_Data</fullName>
        <active>true</active>
        <description>Budget Data</description>
        <label>Budget Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ven_Plan_Data</fullName>
        <active>true</active>
        <description>Plan Data</description>
        <label>Plan Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>